# arroyo

./: AGENTS.md  Cargo.toml
.github/actions/setup-rust-ci/: action.yml
.github/workflows/: binaries.yml  bump-tag.yaml  ci.yml  docker.yaml  helm-chart.yaml
crates/arroyo/: Cargo.toml
crates/arroyo-api/: Cargo.toml
crates/arroyo-api/src/: connection_profiles.rs  connection_tables.rs  pipelines.rs  udfs.rs
crates/arroyo-connectors/: Cargo.toml
crates/arroyo-connectors/src/: lib.rs
crates/arroyo-datastream/src/: logical.rs
crates/arroyo-formats/src/: ser.rs
crates/arroyo-operator/src/: operator.rs
crates/arroyo-planner/: Cargo.toml
crates/arroyo-planner/src/: asof.rs  builder.rs  lib.rs  rewriters.rs  tables.rs  types.rs
crates/arroyo-rpc/: Cargo.toml
crates/arroyo-rpc/proto/: api.proto
crates/arroyo-rpc/src/: formats.rs
crates/arroyo-sql-testing/: Cargo.toml
crates/arroyo-sql-testing/golden_outputs/: asof_join.json  duckdb_hourly_total.json
crates/arroyo-sql-testing/inputs/: quotes.json  trades.json
crates/arroyo-sql-testing/src/: duckdb.rs  lib.rs  smoke_tests.rs
crates/arroyo-worker/: Cargo.toml
crates/arroyo-worker/src/: engine.rs  lib.rs
crates/arroyo/src/: main.rs
crates/integ/: Cargo.toml
crates/integ/tests/: api_tests.rs
docker/: Dockerfile
docs/: duckdb-asof-compatibility-spec.md  pr-34-asof-join-pitfalls.md  pr-34-asof-join-review-eli5.md  pr-34-asof-join-review.md  worker-replicas-eli5.md  worker-replicas.md
docs/issues/: jetstream-source-caveats.md
k8s/arroyo/: README.md  values.yaml
webui/src/: udf_state.ts
(+65 files in other folders)
