[package]
name = "integ"
version = "0.16.0-dev"
edition = "2024"

[dependencies]
arroyo-openapi = { path = "../arroyo-openapi" }
anyhow = "1.0.71"
tokio = { version = "1.16.1", features = ["full"] }
rand = { workspace = true }
tracing = "0.1.37"
serde_json = { version = "1", features = ["preserve_order"] }
rskafka = { git = "https://github.com/influxdata/rskafka", rev = "9e0dad678abac7c70a7873812bbcce1ede1563a2", features = ["transport-tls"] }
reqwest = { workspace = true }
